[gd_scene load_steps=5 format=3 uid="uid://bvt5vax83stvf"]

[ext_resource type="Script" path="res://Assets/Player/Weapons/Tornado/tornado_projectile.gd" id="1_k4e0g"]
[ext_resource type="Texture2D" uid="uid://bxgcnksu7wx3n" path="res://Assets/Tutorial/Items/Weapons/tornado.png" id="2_fficl"]
[ext_resource type="PackedScene" uid="uid://nrvwm1v463l" path="res://Assets/Utility/DamageBoxes/damage_box.tscn" id="3_ot113"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o5ww"]
size = Vector2(19, 28)

[node name="TornadoProjectile" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_k4e0g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_fficl")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="DamageBox" parent="." instance=ExtResource("3_ot113")]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="DamageBox" index="0"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_2o5ww")

[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]

[editable path="DamageBox"]
